Chat/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
